--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content=" FILL ME IN ">
     <meta name="author" content=" FILL ME IN ">
+    <meta http-equiv="last-modified" content="max-age=86400">
     <title>Cameron Pittman: Portfolio</title>
+    <link href="css/style.css" rel="stylesheet">
 
     <link href="css/print.css" rel="stylesheet" media="print">
 
